# python-petclinic-microservices

./: .gitignore  README.md  docker-compose.dev.yml
backend-service/: .gitignore
backend-service/users-service/app/: .gitignore  alembic.ini  pyproject.toml
backend-service/users-service/app/alembic/: env.py
backend-service/users-service/app/alembic/versions/: aed268427c2b_initial_tables.py
backend-service/users-service/app/app/: main.py  utils.py
backend-service/users-service/app/app/api/: deps.py
backend-service/users-service/app/app/core/: config.py
backend-service/users-service/app/app/crud/: __init__.py  base.py  crud_pet.py  crud_pettype.py  crud_user.py
backend-service/users-service/app/app/db/: base.py  init_db.py
backend-service/users-service/app/app/models/: __init__.py  pet.py  pettype.py  user.py
backend-service/users-service/app/app/schemas/: __init__.py  pet.py  pettype.py  user.py
backend-service/users-service/app/app/tests/: conftest.py
backend-service/visits-service/app/: alembic.ini  prestart.sh  pyproject.toml  tests-start.sh
backend-service/visits-service/app/alembic/: env.py
backend-service/visits-service/app/alembic/versions/: 4b75a6fc860c_initial_tables_visits.py
backend-service/visits-service/app/app/: backend_pre_start.py  initial_data.py  main.py
backend-service/visits-service/app/app/core/: config.py
backend-service/visits-service/app/app/crud/: __init__.py  base.py  crud_visit.py
backend-service/visits-service/app/app/db/: base.py  init_db.py  session.py
backend-service/visits-service/app/app/models/: __init__.py  visit.py
(+64 files in other folders)
