[tool.poetry]
name = "app"
version = "0.1.0"
description = "users-service"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
requests = "^2.25.1"
tenacity = "^6.1.0"
pydantic = "^1.8.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
alembic = "^1.5.8"
sqlalchemy = "^1.4.11"
pytest = "^6.2.3"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^21.5b0"
mypy = "^0.812"
flake8 = "^3.9.2"
isort = "^5.8.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
